# wekeo_frp_l3

./: README.md  pyproject.toml
notebooks/: level2.ipynb  level3.ipynb  main.ipynb  stresstest.ipynb
scripts/: stresstest.py  test_reader.py  unzip_and_cleanup.py
wekeo/: download.py  env.py  log_event_accumulator.py  plot_FRP.py  plot_L3_FRP.py  reader.py
wekeo/stubs/: log.py
wekeo_frp_l3/: bkp_downloader.py  config.py  download.py  frp_slstr.py  global_accumulator.py  log_event_accumulator.py  plot_FRP.py  plot_L3_FRP.py  reader.py
