[project]
name = "wekeo_frp_l3"
version = "0.1.0"
description = "wekeo eumetsat project"
requires-python = ">= 3.10"
authors = [{name = "HYGEOS", email = "contact@hygeos.com"}]
dependencies = [
    "ipykernel",
    "matplotlib",
    "hda",
    "xarray",
    "cartopy",
    "python-dotenv",
    "netcdf4",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {}}

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
wekeo_frp_l3 = { path = ".", editable = true }

[tool.pixi.tasks]
tests = "pytest tests/"

[tool.pixi.dependencies]
ipykernel = "*"
pytest = "*"
pytest-html = "*"
matplotlib-base = "*"
pytest-xdist = "*"
hda = "*"
xarray = "*"
cartopy = "*"
python-dotenv = "*"
netcdf4 = "*"

[tool.pixi.environments]
default = { features = ['sys', 'sub', 'dev'], solve-group = "default" }

[tool.pixi.feature.sys.dependencies]
[tool.pixi.feature.dev.dependencies]
[tool.pixi.feature.sub.dependencies]
